Fix: gallery elements' positions and background when media is too large

--- a/vue-client/src/assets/global.css
+++ b/vue-client/src/assets/global.css
@@ -1,6 +1,7 @@
 
 html {
     overflow: auto;
+    background-color: black;
 }
 
 .left {
